# 9boxer

./: .bandit  .claudeignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .screenshot-coverage-badge.json  .screenshot-coverage-report.json  .screenshot-coverage-report.md  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLAUDE_INDEX.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  GITHUB_AGENT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_MACOS.md  LLM_SERVICE_UPDATE_SUMMARY.md  Makefile  PUX_ Talent Mapping  IC Review_CONFIDENTIAL.3.xlsx  PUX_ Talent Mapping  Manager Review_Less VPs_Sheila_CONFIDENTIAL.3.xlsx  README.md  TEST_SUMMARY.md  Talent_Mapping_ANONYMIZED_Example.xlsx  USER_GUIDE.html  USER_GUIDE.md  anonymize_dataset.py  branch-protection.json  check-i18n-keys.cjs  docker-compose.dev.yml  docker-compose.yml  e2e-code-review-fixes-summary.md  e2e-core-expansion-plan.md  e2e-core-test-results.md  e2e-infrastructure-evaluation.md  e2e-phase1-completion-summary.md  (+17 more)
backend/: INTEGRATION_TEST_SUMMARY.md  Makefile  TEST_SUMMARY.md  demo_data_packaging.py  demo_package_output.json  pyproject.toml  pyproject.toml.old  test_export_debug.py  test_llm_agent_architecture.py  test_llm_package_output.json  test_optimized_llm_package.py
backend/build_config/: ninebox.spec
backend/config/: calibration_agent_prompt.txt
backend/data/: ninebox.db
backend/data/temp/: modified_test.xlsx  test-user-id_test.xlsx  test-user-id_test1.xlsx
backend/scripts/: build_executable.bat  build_executable.sh
backend/src/ninebox/: __init__.py  main.py
backend/src/ninebox/api/: auth.py  calibration_summary.py  employees.py  intelligence.py  org_hierarchy.py  preferences.py  session.py  statistics.py  update_analytics.py
backend/src/ninebox/core/: config.py  database.py  dependencies.py  security.py
backend/src/ninebox/models/: constants.py  employee.py  events.py  filters.py  grid_positions.py  preferences.py  schema.sql  session.py  update_analytics.py  user.py
backend/src/ninebox/services/: analysis_registry.py  calibration_summary_service.py  data_packaging_service.py  database.py  employee_service.py  event_manager.py  excel_exporter.py  excel_parser.py  insight_generator.py  insight_transformer.py  intelligence_service.py  llm_service.py  org_service.py  preferences_manager.py  sample_data_generator.py  session_manager.py  session_serializer.py  statistics_service.py  update_analytics_service.py
backend/src/ninebox/types/: __init__.py  insights.py
backend/src/ninebox/utils/: __init__.py  paths.py  pure_statistics.py  query_parsing.py
backend/tests/: FIXTURE_MIGRATION.md  FIXTURE_QUICK_REFERENCE.md  FROZEN_TESTING_CHECKLIST.md  conftest.py  test_frozen.py  test_intelligence_integration.py  test_utils.py
backend/tests/e2e/: test_calibration_agent_e2e.py  test_calibration_agent_e2e.py.backup  test_frozen.py
backend/tests/fixtures/excel_edge_cases/: empty_file.xlsx  extra_columns.xlsx  formulas.xlsx  generate_fixtures.py  large_file.xlsx  leading_trailing_spaces.xlsx  long_strings.xlsx  merged_cells.xlsx  missing_optional.xlsx  multiple_sheets.xlsx  special_characters.xlsx  unicode_characters.xlsx
backend/tests/integration/: conftest.py  test_calibration_summary_api.py  test_cross_module_integration.py  test_e2e.py  test_end_to_end_persistence.py  test_event_tracking.py  test_export_fallback_flow.py  test_filter_intelligence_workflow.py  test_insight_consolidation.py  test_intelligence_integration.py  test_manager_bias_sample_data.py  test_org_hierarchy_api.py  test_recent_files_integration.py  test_sample_data_api.py  test_sample_data_intelligence.py  test_session_employee_statistics_workflow.py  test_session_integration.py  test_session_restore.py  test_upload_parse_export_workflow.py
backend/tests/performance/: conftest.py  profile_calibration_summary.py  profiling_results.csv  test_api_performance.py  test_concurrent_performance.py  test_import_performance.py  test_manager_analysis_performance.py  test_service_performance.py  test_session_persistence_performance.py
backend/tests/test_api/: test_auth.py  test_employees.py  test_intelligence.py  test_request_validation.py  test_session.py  test_statistics.py
backend/tests/test_core/: test_config.py  test_database.py
backend/tests/test_integration/: test_cross_module_integration.py  test_e2e.py  test_end_to_end_persistence.py  test_session_integration.py  test_session_restore.py
backend/tests/test_models/: test_filters.py
backend/tests/test_performance/: __init__.py  conftest.py  test_api_performance.py  test_concurrent_performance.py  test_service_performance.py
backend/tests/test_services/: test_database.py  test_employee_service.py  test_excel_exporter.py  test_excel_parser.py  test_excel_parser_edge_cases.py  test_intelligence_service.py  test_session_manager.py  test_session_persistence.py  test_session_serializer.py  test_statistics_service.py
backend/tests/test_utils/: test_paths.py  test_query_parsing.py
backend/tests/unit/: conftest.py
backend/tests/unit/api/: test_employees.py  test_employees_events.py  test_export_error_handling.py  test_intelligence.py  test_request_validation.py  test_session.py  test_session_close.py  test_session_export_modes.py  test_statistics.py  test_update_analytics.py
backend/tests/unit/core/: test_config.py  test_database.py  test_main.py
backend/tests/unit/models/: test_events.py  test_filters.py  test_grid_positions.py
backend/tests/unit/services/: test_analysis_registry.py  test_calibration_summary_optional_fields.py  test_calibration_summary_service.py  test_data_packaging_service.py  test_database.py  test_database_coverage.py  test_dependencies_coverage.py  test_dependency_injection.py  test_employee_service.py  test_event_manager.py  test_excel_exporter.py  test_excel_parser.py  test_excel_parser_edge_cases.py  test_excel_parser_error_paths.py  test_insight_generator.py  test_insight_transformer.py  test_intelligence_chi_square_gof.py  test_intelligence_manager_analysis.py  test_intelligence_service.py  (+16 more)
(+1240 files in other folders)
