[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninebox"
version = "0.1.0"
description = "9Boxer Application - Backend API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "your.email@example.com"}
]
keywords = ["performance-review", "9-box", "talent-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Backend runtime dependencies
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "hypothesis>=6.98.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",

    # Code quality
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pyright>=1.1.0",

    # Type stubs
    "types-requests",
    "pandas-stubs>=2.0.0",
    "types-openpyxl>=3.1.0",
    "scipy-stubs>=1.11.0",

    # Development tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/9boxer"
Documentation = "https://github.com/yourorg/9boxer/blob/main/README.md"
Repository = "https://github.com/yourorg/9boxer"
Issues = "https://github.com/yourorg/9boxer/issues"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend/src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Fast isolated tests of individual functions/classes",
    "integration: Tests that verify multiple components work together correctly",
    "e2e: End-to-end tests using the frozen executable with full process lifecycle",
    "performance: Benchmark tests for performance measurement (requires pytest-benchmark)",
    "slow: Long-running tests (generally integration, e2e, or performance tests)",
]

[tool.coverage.run]
source = ["backend/src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
mypy_path = "backend/src"
exclude = ["backend/tests", "frontend/tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*", "jose.*", "passlib.*", "scipy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend/src", ".github/scripts"]
exclude = ["backend/tests", "frontend/tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*" = ["PLR2004", "S101", "ARG", "SIM102"]
"__init__.py" = ["F401"]
"tools/**/*" = ["SIM102"]
".github/scripts/**/*" = ["SIM102"]

[tool.ruff.lint.isort]
known-first-party = ["ninebox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.bandit]
exclude_dirs = ["backend/tests", "frontend/tests", "venv", ".venv"]
skips = ["B101", "B404", "B603", "B607"]
