[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninebox"
version = "0.1.0"
description = "9Boxer Application - Backend API"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "your.email@example.com"}
]
keywords = ["performance-review", "9-box", "talent-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

# Backend runtime dependencies
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.70.0",  # Required for structured outputs (output_format parameter)
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",  # Used by e2e tests for frozen executable testing
    "psutil>=5.9.0",  # Used by performance tests for resource monitoring

    # Code quality
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pyright>=1.1.0",

    # Type stubs
    "types-requests",
    "pandas-stubs>=2.0.0",
    "types-openpyxl>=3.1.0",

    # Development tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.6.0",
    "pyyaml>=6.0",  # Used by pre-commit workflow validation hook

    # Documentation
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/9boxer"
Documentation = "https://github.com/yourorg/9boxer/blob/main/README.md"
Repository = "https://github.com/yourorg/9boxer"
Issues = "https://github.com/yourorg/9boxer/issues"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
addopts = """
    --strict-markers
    --strict-config
    --cov=backend/src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    -n 4
    --dist=loadscope
"""
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, database/API required)",
    "e2e: End-to-end tests (slowest, full stack required)",
    "performance: Performance benchmarking tests",
    "slow: Slow-running tests that take significant time",
]

[tool.coverage.run]
source = ["backend/src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true
mypy_path = "backend/src"
exclude = ["backend/tests", "frontend/tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*", "jose.*", "passlib.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend/src", ".github/scripts"]
exclude = ["backend/tests", "frontend/tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*" = ["PLR2004", "S101", "ARG", "SIM102"]
"__init__.py" = ["F401"]
"tools/**/*" = ["SIM102", "PLR0912", "ERA001"]
".github/scripts/**/*" = ["SIM102", "PLR0912", "PLC0415"]
"backend/src/ninebox/api/**/*" = ["B008", "RUF100"]  # FastAPI Depends() pattern, allow noqa for CI linters
"backend/src/ninebox/services/**/*" = ["PLR0912", "PLR0911", "ARG001", "SIM102", "PLC0415", "TCH001", "TCH003"]
"backend/src/ninebox/main.py" = ["ERA001"]
"legacy/**/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["ninebox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.bandit]
exclude_dirs = ["backend/tests", "frontend/tests", "venv", ".venv"]
skips = ["B101", "B404", "B603", "B607"]
